re PR tree-optimization/36766 (natGC.cc:229: internal compiler error: Segmentation fault)

PR tree-optimization/36766
	* tree-cfg.c (gimple_purge_all_dead_eh_edges): Do nothing
	for already removed basic blocks.

	* g++.dg/tree-ssa/pr36766.C: New test.

From-SVN: r139908